dnl -*-shell-script-*-
dnl Process this file with autoconf to produce a configure script.-

AC_INIT(choleski.cc)

. $srcdir/VERSION
FULL_VERSION=$MAJOR_VERSION.$MINOR_VERSION.$PATCH_LEVEL
if test x$MY_PATCH_LEVEL != x; then
	FULL_VERSION=$FULL_VERSION.$MY_PATCH_LEVEL
fi
AM_INIT_AUTOMAKE(flower, $FULL_VERSION)

AC_PROG_CC
AC_PROG_CXX

# turn off shared libraries by default (may be enabled using --enable-shared)
AM_DISABLE_SHARED
AM_PROG_LIBTOOL


missing_dir=`cd $ac_aux_dir && pwd`

AM_MISSING_PROG(ACLOCAL, aclocal, $missing_dir)
AM_MISSING_PROG(AUTOCONF, autoconf, $missing_dir)
AM_MISSING_PROG(AUTOMAKE, automake, $missing_dir)
AM_MISSING_PROG(AUTOHEADER, autoheader, $missing_dir)
# AM_MISSING_PROG(MAKEINFO, makeinfo, $missing_dir)
AC_PATH_PROG(PERL, perl, error)


AC_LANG_CPLUSPLUS

# optimise_b=yes
# shared_b=no
LIB_SUFFIX=.a
MODULE_CXXFLAGS="$MODULE_CXXFLAGS -D_REENTRANT"

if test $optimise_b = yes; then
    MODULE_CXXFLAGS="$MODULE_CXXFLAGS -O2 -DSTRING_UTILS_INLINED"
fi

AC_SUBST(MODULE_CXXFLAGS)
AC_SUBST(MODULE_LDFLAGS)
AC_SUBST(LIB_SUFFIX)

# AC_SUBST(FULL_VERSION)
# AC_SUBST(MAJOR_VERSION)
# AC_SUBST(MINOR_VERSION)
# AC_SUBST(PATCH_LEVEL)
# AC_SUBST(MY_PATCH_LEVEL)

# libtool.info ...
# **Never** try to set library version numbers so that they correspond
# to the release number of your package.  This is an abuse that only
# fosters misunderstanding of the purpose of library versions.

REVISION=$PATCH_LEVEL
# CURRENT=$MINOR_VERSION
CURRENT=$(expr $MINOR_VERSION + 1)
# AGE=$(expr $MAJOR_VERSION + 1)
AGE=$MAJOR_VERSION
AC_SUBST(CURRENT)
AC_SUBST(REVISION)
AC_SUBST(AGE)
AC_SUBST(PERL)

AC_FUNC_MEMCMP
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(memmem snprintf )

AC_DEFINE_UNQUOTED(MODULE_VERSION, "${FULL_VERSION}")

touch stamp-h.in
AM_CONFIG_HEADER(config.hh:config.hh.in)
AC_OUTPUT(Makefile include/Makefile test/Makefile)

