dnl -*-shell-script-*-
dnl Process this file with autoconf to produce a configure script.-

AC_INIT(choleski.cc)

. ./VERSION
FULL_VERSION=$MAJOR_VERSION.$MINOR_VERSION.$PATCH_LEVEL
if test x$MY_PATCH_LEVEL != x; then
	FULL_VERSION=$FULL_VERSION.$MY_PATCH_LEVEL
fi
AM_INIT_AUTOMAKE(flower, $FULL_VERSION)

AC_PROG_CC

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

missing_dir=`cd $ac_aux_dir && pwd`

AM_MISSING_PROG(ACLOCAL, aclocal, $missing_dir)
AM_MISSING_PROG(AUTOCONF, autoconf, $missing_dir)
AM_MISSING_PROG(AUTOMAKE, automake, $missing_dir)
AM_MISSING_PROG(AUTOHEADER, autoheader, $missing_dir)
# AM_MISSING_PROG(MAKEINFO, makeinfo, $missing_dir)

AC_LANG_CPLUSPLUS

optimise_b=yes
shared_b=no
LIB_SUFFIX=.a
MODULE_CXXFLAGS="$MODULE_CXXFLAGS -D_REENTRANT"

AC_ARG_ENABLE(shared,
    [  enable-shared       shared flower library],
    [shared_b=$enableval])
    
AC_ARG_ENABLE(optimise,
    [  disable-optimise    optimisations off],
    [optimise_b=$enableval])

if test $shared_b = yes; then
	MODULE_CXXFLAGS="$MODULE_CXXFLAGS -fPIC -DPIC"
	MODULE_LDFLAGS="-shared -Wl,-soname,libflower.so.\$(VERSION) "
	LIB_SUFFIX=.so
fi

if test $optimise_b = yes; then
    MODULE_CXXFLAGS="$MODULE_CXXFLAGS -O2 -DSTRING_UTILS_INLINED"
fi

AC_SUBST(MODULE_CXXFLAGS)
AC_SUBST(MODULE_LDFLAGS)
AC_SUBST(LIB_SUFFIX)

AC_PROG_CXX
AC_FUNC_MEMCMP
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(memmem snprintf )

AC_DEFINE_UNQUOTED(MODULE_VERSION, "${FULL_VERSION}")

touch stamp-h.in
AM_CONFIG_HEADER(config.hh:config.hh.in)
AC_OUTPUT(Makefile include/Makefile test/Makefile)

