dnl configure.in   -*-shell-script-*-
dnl Process this file with autoconf to produce a configure script. 

# Bootstrap the init proces.  List a file identifies your package.
AC_INIT(make/stepmake.lsm.in)
AC_CONFIG_HEADER($CONFIGFILE.h:config.hh.in)

# Bootstrap StepMake configure
STEPMAKE_INIT

# For all packages except the StepMake package itself
# AC_CONFIG_SUBDIRS(stepmake)

# Uncomment the configuration options your package needs.
# STEPMAKE_COMPILE
# AC_HAVE_HEADERS(limits.h malloc.h string.h unistd.h values.h)
# STEPMAKE_CXX
# STEPMAKE_GXX
# STEPMAKE_CXXTEMPLATE
# STEPMAKE_LEXYACC
# STEPMAKE_LIB
# STEPMAKE_LIBTOOL
STEPMAKE_LOCALE
# STEPMAKE_GETTEXT
# STEPMAKE_MAN
# STEPMAKE_MSGFMT
# STEPMAKE_TEXMF
# STEPMAKE_TEXMF_DIRS

# AM_PATH_GTK(1.0.0,,AC_MSG_ERROR([please install proper version of gtk]))
# AM_PATH_GTK__(0.9.4,,AC_MSG_ERROR([please install proper version of gtk--]))

AC_CHECK_PROGS(MAKEINFO, makeinfo, error)

STEPMAKE_END
