dnl configure.in   -*-shell-script-*-
dnl Process this file with autoconf to produce a configure script. 

# Bootstrap the init proces.
AC_INIT

# Bootstrap StepMake configure
# For user package:
# AC_CONFIG_AUX_DIR(stepmake/bin)
# For stepmake package:
AC_CONFIG_AUX_DIR(bin)
STEPMAKE_INIT

# List a file that identifies your package.
AC_CONFIG_SRCDIR([make/stepmake.lsm.in])
# Move to aclocal.m4?
AC_CONFIG_HEADER([$CONFIGFILE.h:config.hh.in])

# For all packages except the StepMake package itself
# AC_CONFIG_SUBDIRS(stepmake)

CC=echo
AC_SUBST(CC)
# Uncomment the configuration options your package needs.
# STEPMAKE_COMPILE
# AC_CHECK_HEADERS([limits.h malloc.h string.h unistd.h values.h])
# STEPMAKE_CXX
# STEPMAKE_GXX
# STEPMAKE_CXXTEMPLATE
# STEPMAKE_LEXYACC
# STEPMAKE_LIB
# STEPMAKE_LIBTOOL
STEPMAKE_LOCALE
# STEPMAKE_GETTEXT
# STEPMAKE_MAN
# STEPMAKE_MSGFMT
# STEPMAKE_TEXMF
# STEPMAKE_TEXMF_DIRS

# AM_PATH_GTK(1.0.0,,AC_MSG_ERROR([please install proper version of gtk]))
# AM_PATH_GTK__(0.9.4,,AC_MSG_ERROR([please install proper version of gtk--]))

AC_CHECK_PROGS(MAKEINFO, makeinfo, error)

STEPMAKE_END
