# Generated automatically by wild-perl 0.1
# mutopia/Coriolan/Makefile.am.wild

LYFILES = clarinetti-part.ly clarinetti.ly clarinetto-1.ly clarinetto-2.ly contrabasso.ly coriolan.ly corni-part.ly corni.ly corno-1.ly corno-2.ly fagotti-part.ly fagotti.ly fagotto-1.ly fagotto-2.ly flauti-part.ly flauti.ly flauto-1.ly flauto-2.ly global.ly oboe-1.ly oboe-2.ly oboi-part.ly oboi.ly timpani.ly trombe-part.ly trombe.ly trombo-1.ly trombo-2.ly viola.ly violino-1.ly violino-2.ly violoncello.ly
TEXFILES = 
M4FILES = 
EXTRA_DIST = Makefile.am.wild TODO music $(LYFILES) $(TEXFILES) $(M4FILES)

OUTFILES = $(M4FILES:%.m4=%)

default: all $(OUTFILES)

$(srcdir)/Makefile.am: $(srcdir)/Makefile.am.wild
	$(PERL) $(top_srcdir)/bin/wild-perl < $< > $@
